<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <!-- Main ACTIVITY -->
    <string name="main_activity_description">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="facebook_login">Sign in with Facebook</string>
    <string name="email_login">Sign in with Email</string>
    <string name="google_login">Sign in with Google</string>
    <string name="twitter_login">Sign in with Twitter</string>
    <string name="error_not_connected">You need to log in !</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No Internet connection !</string>
    <string name="error_provider">Provider error !</string>
    <string name="error_unknown_error">An unknown error occurred&#8230;</string>
    <string name="connection_succeed">Successful authentication !</string>
    <string name="button_login_text_logged">View Profile</string>
    <string name="button_login_text_not_logged">Connection</string>
    <string name="hungry">I\' m hungry</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_mapview">Map View</string>
    <string name="bottom_navigation_menu_listview">List View</string>
    <string name="bottom_navigation_workmates">Workmates</string>
    <string name="bottom_navigation_chat">Chat</string>

    <!-- DRAWER -->
    <string name="drawer_yourlunch">Your lunch</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>
    <string name="select_a_lunch_place">You haven\'t yet selected a lunch place</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- DETAILS FRAGMENT -->
    <string name="details_call_button">CALL</string>
    <string name="details_like_button">LIKE</string>
    <string name="details_website_button">WEBSITE</string>

   <string name="google_key">AIzaSyBM42q3bmSdlAnPGzGesADPLjRVD6KPLbk</string>

    <!-- Toolbar -->
    <string name="toolbar_search">Search</string>
    <string name="searchbar_hint">Enter a restaurant name</string>

    <!--    WORKMATE LIST-->
    <string name="you_are_eating">You are eating at</string>
    <string name="you_havent_decided">You haven\' t decided yet</string>
    <string name="is_eating">is eating at</string>
    <string name="hasnt_decided">hasn\' t decided yet</string>

    <!--    SETTING-->
    <string name="setting_title">Setting</string>
    <string name="setting_change_name">Change name</string>
    <string name="setting_delete_account">Delete account</string>
    <string name="setting_change_email">Change email</string>
    <string name="setting_change_password">Change password</string>
    <string name="setting_change_radius">Change radius</string>
    <string name="setting_change_picture">change picture</string>
    <string name="setting_change_picture_text">Copy - paste your thumbnail web link here </string>
    <string name="setting_success">Field modified !</string>
    <string name="setting_failure">Something went wrong</string>
    <string name="empty_field">The field is empty !</string>

<!--    RESTAURANTLISTBUILDER-->
    <string name="no_near_restaurants">Enable to find restaurants in the area</string>
    <string name="notification_title">Your lunch</string>
    <string name="default_notification_channel_id">1234</string>

<!--    FACEBOOK AUTH-->
    <string name="facebook_application_id" translatable="false">307660174259885</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb307660174259885</string>

<!--    TESTS-->
    <string name="test_none_of_above">NONE OF THE ABOVE</string>


</resources>