<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

                <item
                    android:id="@+id/activity_main_drawer_yourlunch"
                    android:icon="@drawable/ic_lunch"
                    android:title="@string/drawer_yourlunch" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/drawer_settings" />

                <item
                    android:id="@+id/activity_main_drawer_logout"
                    android:icon="@drawable/ic_baseline_settings_power_24"
                    android:title="@string/drawer_logout" />
</menu>