<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentification_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coursju.go4lunch.authentification.AuthentificationActivity">

        <!-- BACKGROUND PICTURE -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="2.2"
            android:scaleY="1"
            android:gravity="center"
            android:background="@drawable/ic_background_resto"/>

        <!-- MAIN CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="@color/alpha_grey"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- IMAGE VIEW LOGO -->
                    <ImageView
                        android:layout_width="@dimen/logo_size"
                        android:layout_height="@dimen/logo_size"
                        android:background="@drawable/ic_logo_go4lunch_256" />

                    <!-- TITLE GO4LUNCH -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold" />

                    <!-- DESCRIPTION GO4LUNCH  -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_activity_description"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_description"
                        android:textStyle="italic" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/email_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/start_margin"
                        android:layout_marginEnd="@dimen/end_margin"
                        android:layout_marginBottom="@dimen/bottom_margin"
                        android:contentDescription="@string/email_login"
                        android:drawableLeft="@drawable/ic_email"
                        android:text="@string/email_login"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_button"
                        android:textStyle="normal"
                        app:backgroundTint="@color/email_button"
                        app:cornerRadius="10dp" />

                    <Button
                        android:id="@+id/facebook_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/start_margin"
                        android:layout_marginTop="@dimen/top_margin"
                        android:layout_marginEnd="@dimen/end_margin"
                        android:layout_marginBottom="@dimen/bottom_margin"
                        android:drawableLeft="@drawable/ic_facebook"
                        android:text="@string/facebook_login"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_button"
                        android:textStyle="normal"
                        app:backgroundTint="@color/facebook_button"
                        app:cornerRadius="10dp" />

                    <Button
                        android:id="@+id/google_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/start_margin"
                        android:layout_marginTop="@dimen/top_margin"
                        android:layout_marginEnd="@dimen/end_margin"
                        android:drawableLeft="@drawable/ic_google_plus"
                        android:text="@string/google_login"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_button"
                        android:textStyle="normal"
                        app:backgroundTint="@color/google_button"
                        app:cornerRadius="10dp" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>